LDAP server now reads correctly from directory passed on command line.